<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:elevation="@dimen/nav_drawer_elevation"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_drawer_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/nav_drawer_image_margin"
        android:layout_marginLeft="@dimen/nav_drawer_image_margin"
        android:layout_marginRight="@dimen/nav_drawer_image_margin"
        android:layout_marginTop="@dimen/nav_drawer_image_margin"
        android:contentDescription="@string/nav_header_main_image_view_content_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/nav_drawer_default_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nav_drawer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/nav_header_main_text_view_title"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintBottom_toTopOf="@+id/nav_drawer_subtitle"
        app:layout_constraintLeft_toLeftOf="@+id/nav_drawer_image" />

    <TextView
        android:id="@+id/nav_drawer_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/nav_header_main_text_view_subtitle"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        app:layout_constraintBottom_toBottomOf="@+id/nav_drawer_image"
        app:layout_constraintLeft_toLeftOf="@+id/nav_drawer_image" />
</android.support.constraint.ConstraintLayout>
