<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/marginBottom_viewHolder_ann_card"
    android:layout_marginEnd="@dimen/marginEnd_viewHolder_ann_card"
    android:layout_marginStart="@dimen/marginStart_viewHolder_ann_card"
    android:layout_marginTop="@dimen/marginTop_viewHolder_ann_card"
    app:cardCornerRadius="@dimen/cardCornerRadius_viewHolder_ann_card"
    app:cardElevation="@dimen/cardElevation_viewHolder_ann_card">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:paddingBottom="@dimen/paddingBottom_viewHolder_ann_constraintLayout">

        <ImageView
            android:id="@+id/imageView_viewHolder_ann_icon"
            android:layout_width="@dimen/width_viewHolder_ann_icon"
            android:layout_height="@dimen/height_viewHolder_ann_icon"
            android:layout_marginBottom="@dimen/marginBottom_viewHolder_ann_icon"
            android:layout_marginStart="@dimen/marginStart_viewHolder_ann_icon"
            android:layout_marginTop="@dimen/marginTop_viewHolder_ann_icon"
            android:contentDescription="@string/contentDesc_viewHolder_ann_icon"
            android:tint="?attr/tint_viewHolder_ann_icon"
            app:layout_constraintBottom_toBottomOf="@+id/textView_viewHolder_ann_data"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_viewHolder_ann_data"
            app:srcCompat="@drawable/ic_announcements" />

        <TextView
            android:id="@+id/textView_viewHolder_ann_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd_viewHolder_ann_data"
            android:layout_marginStart="@dimen/marginStart_viewHolder_ann_data"
            android:layout_marginTop="@dimen/marginTop_viewHolder_ann_data"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_viewHolder_ann_data"
            android:text="@string/text_viewHolder_ann_data_default"
            android:textSize="@dimen/textSize_viewHolder_ann_data"
            android:textColor="?attr/textColor_viewHolder_ann_data"
            app:layout_constraintLeft_toRightOf="@+id/imageView_viewHolder_ann_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_viewHolder_ann_extras"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd_viewHolder_ann_extras"
            android:layout_marginStart="@dimen/marginStart_viewHolder_ann_extras"
            android:layout_marginTop="@dimen/marginTop_viewHolder_ann_extras"
            android:gravity="center_vertical|end"
            android:padding="@dimen/padding_viewHolder_ann_extras"
            android:text="@string/text_viewHolder_ann_extras_default"
            android:textColor="?attr/textColor_viewHolder_ann_extras"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="@+id/textView_viewHolder_ann_data"
            app:layout_constraintRight_toRightOf="@+id/textView_viewHolder_ann_data"
            app:layout_constraintTop_toBottomOf="@+id/textView_viewHolder_ann_data" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>